--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -14,7 +14,11 @@
   color: white;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 1000;
-  /* border-bottom: 0.5px solid rgba(0, 248, 248, 1); */
+  padding-top: 10px;
+  overflow: scroll;
+}
+.navbar.active{
+  background-color: white;
 }
 
 .navbar-left {
@@ -28,6 +32,7 @@
   color: rgba(0, 248, 248, 1);
   text-shadow: 0 0 0px rgba(0, 248, 248, 0.7), 0 0 10px rgba(72, 229, 229, 0.836), 0 0 15px rgba(0, 248, 248, 0.3);
 }
+
 
 .navbar-right a:hover {
   color: rgba(0, 248, 248, 1);
@@ -55,4 +60,63 @@
 .navbar-right-link-properties.active {
   color: rgba(0, 248, 248, 1);
   text-shadow: 0 0 0px rgba(0, 248, 248, 0.3), 0 0 10px rgba(72, 229, 229, 0.3), 0 0 15px rgba(0, 248, 248, 0.3);
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    justify-content: space-between;
+    gap: 4px;
+  }
+  
+  .hamburger-menu {
+    border: none;
+    background: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .hamburger-menu-ham,
+  .hamburger-menu-close {
+    font-size: 30px;
+    color: white;
+  }
+
+  .mobile-side-menu {
+    background-color: black;
+    
+    z-index: 1000;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    color: white;
+    top: 75px;left: -100vw;
+    min-height: 100vh;
+    width: 100vw;
+    padding: 5px;
+    transition: transform 1s ease-in-out;
+  }
+  .mobile-side-menu.open {
+    transform: translateX(100vw);
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .mobile-menu-link {
+    width: 92%;
+    font-size: 25px;
+    font-weight: 600;
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s;
+    background-color: rgb(36, 38, 38);
+    padding: 10px;
+    border-radius: 8px;
+    text-align: center;
+  }
+.mobile-menu-link.active{
+  background-color: cyan;
+  color: black;
+  box-shadow: 0 0 20px rgba(0, 248, 248, 0.7), 0 0 20px rgba(72, 229, 229, 0.836), 0 0 15px rgba(0, 248, 248, 0.3);
+   
+}
 }
