--- a/src/styles/startup.css
+++ b/src/styles/startup.css
@@ -67,7 +67,12 @@
         
     }
   }
-
+  .startup-div-right-button-prev{
+    font-size: 40px;
+  }
+  .startup-div-right-button-next{
+    font-size: 40px;
+  }
   @media (max-width: 768px) {
     .startup {
       display: flex;
@@ -100,6 +105,12 @@
     .startup-div-right img {
       max-height: 60vh;
       width: 100%;
+    }
+    .startup-div-right-button-prev{
+      font-size: 40px;
+    }
+    .startup-div-right-button-next{
+      font-size: 40px;
     }
   }
   
