--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,77 +1,3 @@
-/* .contact {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-  }
-  
-  .contact-div {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 80%;
-    max-width: 1200px;
-  }
-  
-  .contact-div-left, .contact-div-right {
-    flex: 1;
-    padding: 20px;
-  }
-  
-  .contact-div-left h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
-  }
-  
-  .contact-div-left p {
-    font-size: 16px;
-    margin-bottom: 20px;
-  }
-  
-  .contact-form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .contact-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
-    margin-bottom: 20px;
-  }
-  
-  .contact-form input, .contact-form textarea, .contact-form button {
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-  }
-  
-  .contact-form button {
-    background-color: #007BFF;
-    color: white;
-    cursor: pointer;
-    border: none;
-  }
-  
-  .contact-form button:hover {
-    background-color: #0056b3;
-  }
-  
-  .contact-icons {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-  
-  .contact-icon {
-    display: flex;
-    align-items: center;
-    font-size: 24px;
-  }
-  
-   */
 
    .contact {
     display: flex;
@@ -86,7 +12,6 @@
     flex-direction: row;
     align-items: center;
     width: 80%;
-    max-width: 1200px;
   }
   
   .contact-div-left, .contact-div-right {
@@ -187,4 +112,41 @@
     padding: 15px;
     margin-top: 10px;
   }
+  @media (max-width: 768px) {
+    
+   .contact {
+    max-width: 100vw;
+  }
   
+    .contact-div {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 90vw;
+    }
+    .contact-div-left, .contact-div-right {
+      flex: 1;
+      padding: 10px;
+    }
+    .contact-div-left h2 {
+      color: cyan;
+      text-shadow: 0 0 0px rgba(0, 248, 248, 0.7), 0 0 10px rgba(72, 229, 229, 0.836), 0 0 15px rgba(0, 248, 248, 0.3);
+     
+      font-size: 24px;
+      margin-bottom: 10px;
+    }
+    .contact-div-left p {
+      font-size: 16px;
+      margin-bottom: 30px;
+    }
+    .contact-form {
+      display: flex;
+      flex-direction: column;
+    }
+    .contact-grid{
+      display: grid;
+      grid-template-columns: 0.1fr 1fr;
+      gap: 20px;
+      margin-bottom: 20px;
+    } 
+  }
