--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,4 +1,4 @@
-
+/* 
    .contact {
     display: flex;
     justify-content: center;
@@ -149,4 +149,133 @@
       gap: 20px;
       margin-bottom: 20px;
     } 
+  } */
+  .contact {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    color: white;
   }
+  
+  .contact-div {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin: 0 auto;
+  }
+  
+  .contact-div-left,
+  .contact-div-right {
+    padding: 20px;
+  }
+  
+  .contact-div-left h2 {
+    color: cyan;
+    text-shadow: 0 0 0px rgba(0, 248, 248, 0.7), 0 0 10px rgba(72, 229, 229, 0.836), 0 0 15px rgba(0, 248, 248, 0.3);
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+  
+  .contact-div-left p {
+    font-size: 16px;
+    margin-bottom: 30px;
+  }
+  
+  .contact-form {
+    display: flex;
+    padding: 10px;
+    flex-direction: column;
+    justify-content: center;align-items: center;
+  }
+  
+  .contact-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+    margin-bottom: 20px;
+    gap: 6px;
+  }
+  
+  .contact-form input,
+  .contact-form textarea,
+  .contact-form button {
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    width: 100%;
+  }
+  
+  .contact-form button {
+    background-color: cyan;
+    color: black;
+    font-weight: bolder;
+    cursor: pointer;
+    border: none;
+    padding: 10px 0;
+    font-size: 16px;
+  }
+  
+  .contact-form button:hover {
+    box-shadow: 0 0 0px rgba(0, 248, 248, 0.7), 0 0 10px rgba(72, 229, 229, 0.836), 0 0 15px rgba(0, 248, 248, 0.3);
+  }
+  
+  .contact-div-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  
+  .contact-icons {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  
+  .contact-icon {
+    display: flex;
+    align-items: center;
+    font-size: 24px;
+  }
+  
+  .contact-icon div {
+    margin-left: 10px;
+  }
+  
+  .contact-icon p {
+    font-size: 14px;
+    margin: 0;
+    color: #888;
+  }
+  
+  .contact-icon h3 {
+    margin: 0;
+    font-size: 16px;
+  }
+  
+  .notification {
+    background-color: #4caf50;
+    color: white;
+    text-align: center;
+    padding: 15px;
+    margin-top: 10px;
+  }
+  
+  @media (min-width: 768px) {
+    .contact-div {
+      flex-direction: row;
+      align-items: center;
+    }
+  
+    .contact-div-left,
+    .contact-div-right {
+      flex: 1;
+    }
+  
+    .contact-grid {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+  
