--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -3,6 +3,7 @@
   max-width: 100vw;
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 50px;
   color: white;
   padding: 20px 50px;
@@ -112,6 +113,7 @@
 @media (max-width: 768px) {
   .home {
     flex-direction: column-reverse;
+    justify-content: flex-start;
     margin-top: -0px;
   }
 
