--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -140,6 +140,8 @@
   .home-right {
     height: 250px;
     width: 250px;
+    display: flex;
+    justify-content: center;align-items: center;
     margin: 0 auto; /* Center the image */
   }
 
